syntax = "proto3";

package fanout;

option go_package = "github.com/ArmaanKatyal/tweetbit;tweetbit";

service FollowerService {
    rpc GetUserFollowers (GetFollowerRequest) returns (GetFollowerResponse) {};
}

message GetFollowerRequest {
    string user_id = 1;
    string uuid = 2;
}

message User {
    int32 id = 1;
    string uuid = 2;
    string email = 3;
    string first_name = 4;
    string last_name = 5;
    string created_at = 6;
    int32 favorites_count = 7;
    int32 followers_count = 8;
    int32 following_count = 9;

}

message GetFollowerResponse {
    repeated User users = 1;
}
